--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "gruntplugin"
   ],
   "dependencies": {
-    "markdown": "^0.5.0"
+    "async": "^0.9.0",
+    "markdown": "^0.5.0",
+    "marked": "^0.3.2"
   }
 }
