--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
   ],
   "dependencies": {
     "async": "^0.9.0",
+    "handlebars": "^2.0.0",
     "markdown": "^0.5.0",
-    "marked": "^0.3.2"
+    "marked": "^0.3.2",
+    "underscore": "^1.7.0"
   }
 }
