--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "handlebars": "^2.0.0",
     "markdown": "^0.5.0",
     "marked": "^0.3.2",
-    "underscore": "^1.7.0"
+    "underscore": "^1.7.0",
+    "yaml-front-matter": "^3.0.1"
   }
 }
